# ferret-vm

./: .gitignore  Cargo.toml  Main.java  Other.java  README.md  build.rs  build.sh  clean.sh  getjdk.sh  std.c
src/: main.rs  util.rs
