[package]
name = "ferret-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cafebabe = { git = "https://github.com/staktrace/cafebabe" }
inkwell = { git = "https://github.com/TheDan64/inkwell", features = [
    "llvm12-0",
] }
